2009-01-28  Darin Fisher  <darin@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=23546
        Upstream GoogleURL implementation of KURL

        * platform/KURL.h:
        * platform/KURLGoogle.cpp: Added.
        * platform/KURLGooglePrivate.h: Added.

2009-01-27  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        REGRESSION (r40234): Launching iTunes from a link displays a
        "Safari can't find the Internet plug-in" sheet in Safari
        rdar://problem/6533678

        * rendering/RenderPartObject.cpp:
        (WebCore::havePlugin): Put the check for empty string in here.
        (WebCore::serviceTypeForClassId): Only return activeXType() if
        we have a plug-in that can handle that type. While it might be logical
        to return an Active X type for any <object> with a classId in it,
        even if we don't have a plug-in that implements Active X, existing
        clients, such as Safari, don't expect that.

2009-01-27  Dan Bernstein  <mitz@apple.com>

        Reviewed by Steve Falkenburg.

        - fix <rdar://problem/6524351> Text looks bad when font smoothing is
          forced off

        * platform/graphics/win/FontCGWin.cpp:
        (WebCore::Font::drawGlyphs): Changed to use GDI rather than Core
        Graphics if the client has turned font smoothing off.

2009-01-27  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=23360
        
        Use the new container-relative repaint methods to compute
        post-layout repaints, and repaints using RenderLayer's
        cached repaintRect() relative to that container, rather than
        using absolute coords.

        Replaced lots of boilerplate old/new rect code in various
        layout methods with a stack-based LayoutRepainter class, and
        fixed a bug in RenderTable which set didFullRepaint to
        'true' every time.
